--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
-{
+hR
   "name": "Brunch-Angular-Base",
   "description": "A Brunch.io base app for Angular.js applications.",
   "version": "0.1.0",
   "maintainers": [
     {
       "name": "Kevin Incorvia",
-      "email": "hello@kvn.io",
-      "web": ""
+      "email": "hello@kvn.io"
     }
   ],
   "dependencies": {
-    "bower": "0.9.2"
+    "bower": "0.9.2",
+    "coffee-script": "~1.6",
+    "coffee-script-brunch": ">= 1.5 < 1.6"
   }
 }
